--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,24 +3,21 @@ jobs:
   build:
     working_directory: ~/app
     docker:
-      image: circleci/node:6.11.1
+      - image: circleci/node:6.11.1
     steps:
       - checkout
-      - run:
-          name: update-npm
-          command: 'sudo npm install -g npm@latest'
       - restore_cache:
           key: dependency-cache-{{ checksum "package.json" }}
       - run:
           name: install
-          command: npm install
+          command: yarn install
       - save_cache:
           key: dependency-cache-{{ checksum "package.json" }}
           paths:
             - ./node_modules
       - run:
           name: test
-          command: npm test
+          command: yarn test
       - store_artifacts:
           path: test-results.xml
           prefix: tests
