Added publish to circleci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,3 +23,10 @@ jobs:
           prefix: tests
       - store_test_results:
           path: test-results.xml
+      - deploy:
+          name: Maybe Deploy
+          command: |
+            if [ "${CIRCLE_BRANCH}" == "master" ]; then
+              echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" >> ~/.npmrc
+              yarn run 2npm
+            fi
