Added config options via .screepsrc

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
+    "ini": "^1.3.4",
     "mongodb": "^2.2.30",
     "q-json-response": "^0.1.3",
     "redis": "^2.7.1"
