--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,7 @@ jobs:
           command: yarn test
       - store_artifacts:
           path: test-results.xml
-          prefix: tests
+          destination: tests
       - store_test_results:
           path: test-results.xml
       - deploy:
