--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "screepsmod-mongo",
-  "version": "2.4.1",
+  "version": "3.0.0-beta.0",
   "description": "",
   "main": "index.js",
   "scripts": {
