--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "screepsmod-mongo",
-  "version": "2.7.4",
+  "version": "2.8.0-beta.1",
   "description": "",
   "main": "index.js",
   "scripts": {
