--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "devDependencies": {
     "publish": "^0.6.0",
-    "standard": "*"
+    "standard": "14.3.3"
   },
   "screeps_mod": true,
   "keywords": [
@@ -19,11 +19,11 @@
   "author": "Adam Shumann",
   "license": "MIT",
   "dependencies": {
-    "body-parser": "^1.17.2",
-    "express": "^4.15.3",
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
     "ini": "^1.3.4",
-    "mongodb": "^2.2.30",
+    "mongodb": "^3.5.5",
     "q-json-response": "^0.1.3",
-    "redis": "^2.7.1"
+    "redis": "^3.0.2"
   }
 }
