--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "ini": "^1.3.4",
+    "ioredis": "^4.28.5",
     "mongodb": "^3.5.5",
     "q-json-response": "^0.1.3",
     "redis": "^3.0.2"
