--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "ini": "^1.3.4",
+    "lodash": "^4.17.21",
     "mongodb": "^3.5.5",
+    "q": "^1.5.1",
     "q-json-response": "^0.1.3",
     "redis": "^3.0.2"
   }
